deploy/ingress/websocket-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: distr-websocket-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /distr-ws(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: websocket-server
                port:
                  number: 9001
